[gd_scene load_steps=9 format=2]

[ext_resource path="res://CargoShip/CargoShip.png" type="Texture" id=1]
[ext_resource path="res://CargoShip/CargoShip.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="CargoShip" type="StaticBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 2
playing = true

[node name="CargoShipCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 16, -116, -16, -117, -16, -91, -98, -91, -98, -69, -14, -69, -15, -48, -25, -48, -27, -4, -115, -4, -115, 18, -27, 18, -27, 35, -20, 38, -21, 48, -100, 48, -100, 98, -19, 97, -15, 116, 13, 116, 20, 98, 101, 96, 99, 48, 19, 50, 18, 39, 27, 36, 28, 21, 115, 18, 115, -5, 29, -4, 26, -48, 18, -49, 16, -66, 100, -68, 100, -92, 17, -91 )

[node name="AsteroidCollisionArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="AsteroidCollisionPolygon" type="CollisionPolygon2D" parent="AsteroidCollisionArea"]
polygon = PoolVector2Array( 12, -111, -13, -111, -12, -88, -96, -89, -96, -71, -9, -70, -11, -44, -20, -41, -21, 0, -109, -2, -110, 15, -20, 15, -19, 28, -10, 31, -9, 49, -9, 56, -94, 55, -95, 92, -11, 91, -10, 111, 10, 111, 11, 92, 95, 92, 94, 55, 10, 56, 10, 30, 19, 27, 23, 12, 108, 12, 108, -1, 22, -1, 20, -42, 10, -42, 9, -70, 95, -72, 95, -87, 11, -88 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="AsteroidCollisionArea" to="." method="_on_AsteroidCollisionArea_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
